--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Will You Be My Valentine?</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     * {
       box-sizing: border-box;
@@ -21,12 +23,12 @@
 
     .container {
       text-align: center;
-      position: relative;
-      padding: 40px;
+      padding: 30px;
+      max-width: 90%;
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 2.8rem;
       color: #fff;
       margin-bottom: 10px;
     }
@@ -39,21 +41,28 @@
 
     .buttons {
       position: relative;
-      height: 120px;
+      width: 320px;
+      height: 140px;
+      margin: 0 auto;
     }
 
     button {
-      padding: 15px 40px;
-      font-size: 1.2rem;
+      padding: 14px 38px;
+      font-size: 1.1rem;
       border: none;
       border-radius: 30px;
       cursor: pointer;
-      transition: all 0.2s ease;
+      position: absolute;
+      transition: transform 0.15s ease;
+      white-space: nowrap;
     }
 
     #yesBtn {
       background-color: #ff4d6d;
       color: white;
+      left: 0;
+      right: 0;
+      margin: auto;
     }
 
     #yesBtn:hover {
@@ -63,28 +72,15 @@
     #noBtn {
       background-color: white;
       color: #ff4d6d;
-      position: absolute;
-      left: 200px;
+      left: 180px;
       top: 0;
     }
 
     .hidden-message {
-      position: absolute;
-      inset: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2.5rem;
-      color: white;
-      text-align: center;
       display: none;
-    }
-
-    .hearts {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      font-size: 2rem;
+      color: white;
+      font-size: 2.4rem;
+      line-height: 1.4;
     }
   </style>
 </head>
@@ -93,7 +89,7 @@
   <div class="container">
     <h1>Will you be my Valentine? 💖</h1>
     <div class="subtext">
-      I promise unlimited love, laughs, and annoying you forever 🥺
+      I promise love, laughter, and bothering you forever 🥺
     </div>
 
     <div class="buttons">
@@ -102,9 +98,9 @@
     </div>
 
     <div class="hidden-message" id="loveMessage">
-      Yayyy!! 🥰<br />
-      I knew you’d say yes 💖<br />
-      You’re stuck with me forever 💘
+      YAYYY 🥰💘<br>
+      I knew you’d say yes!<br>
+      You’re officially my Valentine 💖
     </div>
   </div>
 
@@ -112,20 +108,27 @@
     const noBtn = document.getElementById("noBtn");
     const yesBtn = document.getElementById("yesBtn");
     const loveMessage = document.getElementById("loveMessage");
+    const buttonsContainer = document.querySelector(".buttons");
 
     noBtn.addEventListener("mouseenter", () => {
-      const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-      const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+      const containerRect = buttonsContainer.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
+
+      const maxX = containerRect.width - btnRect.width;
+      const maxY = containerRect.height - btnRect.height;
+
+      const x = Math.random() * maxX;
+      const y = Math.random() * maxY;
 
       noBtn.style.left = `${x}px`;
       noBtn.style.top = `${y}px`;
     });
 
     yesBtn.addEventListener("click", () => {
-      document.querySelector(".buttons").style.display = "none";
+      buttonsContainer.style.display = "none";
       document.querySelector("h1").style.display = "none";
       document.querySelector(".subtext").style.display = "none";
-      loveMessage.style.display = "flex";
+      loveMessage.style.display = "block";
     });
   </script>
 
