--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     .buttons {
       position: relative;
       width: 320px;
-      height: 140px;
+      height: 160px;
       margin: 0 auto;
     }
 
@@ -60,20 +60,21 @@
     #yesBtn {
       background-color: #ff4d6d;
       color: white;
-      left: 0;
-      right: 0;
-      margin: auto;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 60px;
     }
 
     #yesBtn:hover {
-      transform: scale(1.1);
+      transform: translateX(-50%) scale(1.1);
     }
 
     #noBtn {
       background-color: white;
       color: #ff4d6d;
-      left: 180px;
+      left: 50%;
       top: 0;
+      transform: translateX(-50%);
     }
 
     .hidden-message {
@@ -89,7 +90,7 @@
   <div class="container">
     <h1>Will you be my Valentine? 💖</h1>
     <div class="subtext">
-      I promise love, laughter, and bothering you forever 🥺
+      You can try saying no… but it won’t work 😌
     </div>
 
     <div class="buttons">
@@ -108,24 +109,23 @@
     const noBtn = document.getElementById("noBtn");
     const yesBtn = document.getElementById("yesBtn");
     const loveMessage = document.getElementById("loveMessage");
-    const buttonsContainer = document.querySelector(".buttons");
+
+    const radius = 60; // 👈 movement radius in pixels
+    const centerX = 160; // half of container width (320 / 2)
+    const centerY = 30;  // base vertical position
 
     noBtn.addEventListener("mouseenter", () => {
-      const containerRect = buttonsContainer.getBoundingClientRect();
-      const btnRect = noBtn.getBoundingClientRect();
-
-      const maxX = containerRect.width - btnRect.width;
-      const maxY = containerRect.height - btnRect.height;
-
-      const x = Math.random() * maxX;
-      const y = Math.random() * maxY;
+      const angle = Math.random() * Math.PI * 2;
+      const x = centerX + radius * Math.cos(angle);
+      const y = centerY + radius * Math.sin(angle);
 
       noBtn.style.left = `${x}px`;
-      noBtn.style.top = `${y}px`;
+      noBtn.style.top = `${Math.max(0, y)}px`;
+      noBtn.style.transform = "translateX(-50%)";
     });
 
     yesBtn.addEventListener("click", () => {
-      buttonsContainer.style.display = "none";
+      document.querySelector(".buttons").style.display = "none";
       document.querySelector("h1").style.display = "none";
       document.querySelector(".subtext").style.display = "none";
       loveMessage.style.display = "block";
