--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     .buttons {
       position: relative;
-      width: 320px;
-      height: 160px;
+      width: 360px;
+      height: 180px;
       margin: 0 auto;
     }
 
@@ -53,16 +53,16 @@
       border-radius: 30px;
       cursor: pointer;
       position: absolute;
-      transition: transform 0.15s ease;
       white-space: nowrap;
+      transition: transform 0.15s ease;
     }
 
     #yesBtn {
       background-color: #ff4d6d;
       color: white;
       left: 50%;
+      top: 110px;
       transform: translateX(-50%);
-      top: 60px;
     }
 
     #yesBtn:hover {
@@ -73,7 +73,7 @@
       background-color: white;
       color: #ff4d6d;
       left: 50%;
-      top: 0;
+      top: 30px;
       transform: translateX(-50%);
     }
 
@@ -90,7 +90,7 @@
   <div class="container">
     <h1>Will you be my Valentine? 💖</h1>
     <div class="subtext">
-      You can try saying no… but it won’t work 😌
+      Go on… try clicking No 😏
     </div>
 
     <div class="buttons">
@@ -109,23 +109,32 @@
     const noBtn = document.getElementById("noBtn");
     const yesBtn = document.getElementById("yesBtn");
     const loveMessage = document.getElementById("loveMessage");
+    const container = document.querySelector(".buttons");
 
-    const radius = 60; // 👈 movement radius in pixels
-    const centerX = 160; // half of container width (320 / 2)
-    const centerY = 30;  // base vertical position
+    // movement range around center
+    const moveX = 120; // horizontal freedom
+    const moveY = 70;  // vertical freedom
 
     noBtn.addEventListener("mouseenter", () => {
-      const angle = Math.random() * Math.PI * 2;
-      const x = centerX + radius * Math.cos(angle);
-      const y = centerY + radius * Math.sin(angle);
+      const centerX = container.clientWidth / 2;
+      const centerY = 40;
+
+      const randomX = centerX + (Math.random() * moveX * 2 - moveX);
+      const randomY = centerY + (Math.random() * moveY * 2 - moveY);
+
+      const maxX = container.clientWidth - noBtn.offsetWidth;
+      const maxY = container.clientHeight - noBtn.offsetHeight;
+
+      const x = Math.max(0, Math.min(randomX, maxX));
+      const y = Math.max(0, Math.min(randomY, maxY));
 
       noBtn.style.left = `${x}px`;
-      noBtn.style.top = `${Math.max(0, y)}px`;
+      noBtn.style.top = `${y}px`;
       noBtn.style.transform = "translateX(-50%)";
     });
 
     yesBtn.addEventListener("click", () => {
-      document.querySelector(".buttons").style.display = "none";
+      container.style.display = "none";
       document.querySelector("h1").style.display = "none";
       document.querySelector(".subtext").style.display = "none";
       loveMessage.style.display = "block";
